--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   --white: #ffffff;
   --broun: #757575;
   --black: #000000;
-  --transition-dur-and-func: 250ms linear;
+  --transition-dur-and-func: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 h1,
@@ -122,7 +122,7 @@ img {
   color: var(--dark);
   padding-top: 32px;
   padding-bottom: 32px;
-  transition: color var(--transition-dur-and-func)
+  transition: color var(--transition-dur-and-func);
 }
 
 .navigation-logo-link {
@@ -171,6 +171,7 @@ img {
   display: flex;
   align-items: center;
   transition: color var(--transition-dur-and-func);
+  /* padding: 32px 0; */
 }
 
 .contacts-item {
@@ -297,7 +298,8 @@ img {
   margin: 0 auto;
   border: none;
   padding: 10px 32px;
-  transition: background-color var(--transition-dur-and-func), color var(--transition-dur-and-func) ;
+  transition: background-color var(--transition-dur-and-func),
+    color var(--transition-dur-and-func);
 }
 
 .services-button:hover {
@@ -408,10 +410,49 @@ img {
   align-items: center;
 }
 
-.features-text-container{
+.features-link-wrapper {
+  display: block;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  
+}
+
+.features-img-wrapper {
+  position: relative;
+
+  /* overflow: hidden; */
+}
+
+.features-overlay {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  position: absolute;
+  bottom: 0;
+  height: 0;
+  width: 370px;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: var(--white);
+  
+  overflow: auto;
+  opacity: 0;
+  transform: translateY(-100%);
+  transition: background-color var(--transition-dur-and-func) color var(--transition-dur-and-func) ;
+}
+
+.features-link-wrapper:hover .features-overlay,
+.features-link-wrapper:focus .features-overlay {
+  transform: translateY(0%);
+  opacity: 1;
 }
 
 /* team */
@@ -492,7 +533,8 @@ img {
   height: 100%;
   background-color: var(--white);
   border-radius: 50%;
-  transition: background-color var(--transition-dur-and-func), fill var(--transition-dur-and-func) ;
+  transition: background-color var(--transition-dur-and-func),
+    fill var(--transition-dur-and-func);
 }
 .team-social-link:focus {
   background-color: var(--blue);
@@ -566,7 +608,8 @@ img {
 
   fill: #afb1b8;
 
-  transition: border-color var(--transition-dur-and-func), fill var(--transition-dur-and-func);
+  transition: border-color var(--transition-dur-and-func),
+    fill var(--transition-dur-and-func);
 }
 
 .lean-clients-link:hover {
@@ -762,10 +805,10 @@ img {
   background: #f5f4fa;
   border-radius: 4px;
   border: none;
-  transition: background-color var(--transition-dur-and-func), color var(--transition-dur-and-func), box-shadow var(--transition-dur-and-func) ;
+  transition: background-color var(--transition-dur-and-func),
+    color var(--transition-dur-and-func),
+    box-shadow var(--transition-dur-and-func);
 }
-
-
 
 .portfolio-button-press:focus {
   background: var(--blue);
@@ -773,7 +816,8 @@ img {
 }
 
 .portfolio-button-press:hover {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   background-color: var(--blue);
   color: var(--white);
@@ -793,6 +837,40 @@ img {
   flex-wrap: wrap;
   list-style-type: none;
 }
+.portfolio-list-link-wrapper {
+  display: block;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+}
+
+.portfolio-list-img-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: var(--white);
+  padding: 63px 24px;
+  background-color: rgba(33, 150, 243, 0.9);
+  overflow: auto;
+  transform: translateY(100%);
+  transition: background-color var(--transition-dur-and-func) color
+    var(--transition-dur-and-func);
+}
+.portfolio-list-link-wrapper:hover .portfolio-overlay,
+.portfolio-list-link-wrapper:focus .portfolio-overlay {
+  transform: translateY(0%);
+}
 
 .portfolio-title {
   font-family: "Roboto", sans-serif;
@@ -803,6 +881,7 @@ img {
   color: var(--dark);
   margin-bottom: 4px;
 }
+
 .portfolio-text {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -840,14 +919,15 @@ img {
 
 .backdrop {
   position: fixed;
-  transition: opacity ;
+  transition: opacity;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
   z-index: 100;
-  transition: opacity var(--transition-dur-and-func), visibility var(--transition-dur-and-func) ;
+  transition: opacity var(--transition-dur-and-func),
+    visibility var(--transition-dur-and-func);
 }
 
 .backdrop.is-hidden {
