--- a/css/styles.css
+++ b/css/styles.css
@@ -864,8 +864,9 @@ img {
   background-color: rgba(33, 150, 243, 0.9);
   overflow: auto;
   transform: translateY(100%);
-  transition: background-color var(--transition-dur-and-func) color
-    var(--transition-dur-and-func);
+  transition: transform 250ms linear;
+  /* transition: background-color var(--transition-dur-and-func) color
+    var(--transition-dur-and-func) box-shadow var(--transition-dur-and-func); */
 }
 .portfolio-list-link-wrapper:hover .portfolio-overlay,
 .portfolio-list-link-wrapper:focus .portfolio-overlay {
