--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ img {
   position: absolute;
   content: "";
   left: 0;
-  bottom: 0;
+  bottom: -1px;
   height: 4px;
   width: 100%;
   background: #2196f3;
@@ -170,7 +170,7 @@ img {
   list-style-type: none;
   display: flex;
   align-items: center;
-  transition: color var(--transition-dur-and-func);
+  transition: color var(--transition-dur-and-func) fill var(--transition-dur-and-func);
   /* padding: 32px 0; */
 }
 
@@ -233,6 +233,11 @@ img {
 
 .contacts-social-link:focus {
   color: #188ce8;
+}
+
+.contacts-social-icon-envelo,
+.contacts-social-icon-smartphone {
+  transition: fill var(--transition-dur-and-func);
 }
 
 .contacts-social-link:focus .contacts-social-icon-envelop {
@@ -298,8 +303,7 @@ img {
   margin: 0 auto;
   border: none;
   padding: 10px 32px;
-  transition: background-color var(--transition-dur-and-func),
-    color var(--transition-dur-and-func);
+  transition: background-color var(--transition-dur-and-func);
 }
 
 .services-button:hover {
@@ -409,7 +413,7 @@ img {
   margin-bottom: 30px;
   align-items: center;
 }
-
+/* 
 .features-link-wrapper {
   display: block;
   text-decoration: none;
@@ -422,10 +426,20 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   
-}
+} */
 
 .features-img-wrapper {
   position: relative;
+  display: block;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 
   /* overflow: hidden; */
 }
@@ -443,17 +457,17 @@ img {
   background-color: rgba(47, 48, 58, 0.8);
   color: var(--white);
   
-  overflow: auto;
+  /* overflow: auto;
   opacity: 0;
   transform: translateY(-100%);
-  transition: background-color var(--transition-dur-and-func) color var(--transition-dur-and-func) ;
+  transition: background-color var(--transition-dur-and-func) color var(--transition-dur-and-func) ; */
 }
 
-.features-link-wrapper:hover .features-overlay,
+/* .features-link-wrapper:hover .features-overlay,
 .features-link-wrapper:focus .features-overlay {
   transform: translateY(0%);
   opacity: 1;
-}
+} */
 
 /* team */
 
@@ -533,8 +547,7 @@ img {
   height: 100%;
   background-color: var(--white);
   border-radius: 50%;
-  transition: background-color var(--transition-dur-and-func),
-    fill var(--transition-dur-and-func);
+  transition: background-color var(--transition-dur-and-func);
 }
 .team-social-link:focus {
   background-color: var(--blue);
@@ -556,6 +569,7 @@ img {
   height: 20px;
 
   fill: #afb1b8;
+  transition: fill var(--transition-dur-and-func);
 }
 
 /* <!-- lean-clients --> */
@@ -599,6 +613,7 @@ img {
   border-radius: 4px;
   cursor: pointer;
   fill: #afb1b8;
+  transition: border-color var(--transition-dur-and-func);
 }
 
 .lean-clients-social-icon {
@@ -608,8 +623,7 @@ img {
 
   fill: #afb1b8;
 
-  transition: border-color var(--transition-dur-and-func),
-    fill var(--transition-dur-and-func);
+  transition: fill var(--transition-dur-and-func);
 }
 
 .lean-clients-link:hover {
@@ -639,7 +653,6 @@ img {
 
 .footer-container {
   display: flex;
-  justify-content: flex-start;
   align-items: baseline;
 }
 
@@ -865,8 +878,6 @@ img {
   overflow: auto;
   transform: translateY(100%);
   transition: transform 250ms linear;
-  /* transition: background-color var(--transition-dur-and-func) color
-    var(--transition-dur-and-func) box-shadow var(--transition-dur-and-func); */
 }
 .portfolio-list-link-wrapper:hover .portfolio-overlay,
 .portfolio-list-link-wrapper:focus .portfolio-overlay {
@@ -895,6 +906,7 @@ img {
   margin-right: 30px;
   margin-bottom: 30px;
   background: var(--white);
+  transition: box-shadow var(--transition-dur-and-func);
 }
 .portfolio-background:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
